# django-problem

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
problem/: admin.py  api_views.py  apps.py  forms.py  models.py  serializers.py  settings.py  signals.py  urls.py  views.py
problem/migrations/: 0001_initial.py
problem/templates/problem/: problem_detail.html  problem_list.html
